--- a/examples/showcase/index.html
+++ b/examples/showcase/index.html
@@ -1,11 +1,26 @@
 <html>
-  <head>
-    <title>react-winjs Showcase</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/winjs/4.0.0-preview/css/ui-light.css" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/winjs/4.0.0-preview/js/WinJS.min.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="browser-bundle.js"></script>
-  </body>
+    <head>
+        <title>react-winjs Showcase</title>
+
+        <script src="http://fb.me/react-with-addons-0.12.2.min.js"></script>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/winjs/4.0.0-preview/css/ui-light.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/winjs/4.0.0-preview/js/WinJS.min.js"></script>
+
+        <style>
+            #app {
+                height: 100%;
+            }
+            .example {
+                padding-bottom: 30px;
+            }
+            .example h3 {
+                padding-bottom: 10px;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script src="browser-bundle.js"></script>
+    </body>
 </html>
