Add ListView example

--- a/examples/showcase/index.html
+++ b/examples/showcase/index.html
@@ -13,6 +13,14 @@
             }
 
             /*
+             * ListView
+            */
+
+            #app .listViewExample .win-container {
+                height: 50px;
+            }
+
+            /*
              * SplitView
             */
 
